--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,13 @@
   font-family: Main, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
-.font-outline-nude{
+.font-outline-white{
   -webkit-text-stroke: 1px rgb(255, 255, 255);
+  /* -webkit-text-stroke: 1px rgb(255, 255, 255); */
+}
+
+.font-outline-yellow {
+  -webkit-text-stroke: 1px rgb(244, 244, 138);
   /* -webkit-text-stroke: 1px rgb(255, 255, 255); */
 }
 
