added smoke background

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Display;
-  src: url(/src/assets/fonts/Hipnouma.otf);
+  src: url(/src/assets/fonts/Sephyrok\ Regular.otf);
 }
 
 @font-face {
@@ -30,9 +30,18 @@
   /* -webkit-text-stroke: 1px rgb(255, 255, 255); */
 }
 
+.font-outline-black {
+  -webkit-text-stroke: 1px rgb(0, 0, 0);
+  /* -webkit-text-stroke: 1px rgb(255, 255, 255); */
+}
+
 .font-outline-yellow {
   -webkit-text-stroke: 1px rgb(244, 244, 138);
   /* -webkit-text-stroke: 1px rgb(255, 255, 255); */
+}
+
+.font-lg-vw{
+  font-size: clamp(2rem, 10vw, 20rem)
 }
 
 .line-height{
@@ -51,10 +60,10 @@
 }
 
 .font-glow-black {
-  text-shadow: 0 0 4px rgb(26, 26, 26),
-    0 0 4px rgb(26, 26, 26),
-    0 0 30px rgb(26, 26, 26),
-    0 0 20px rgb(26, 26, 26);
+  text-shadow: 0 0 4px rgb(248, 247, 247),
+    0 0 3px rgb(26, 26, 26),
+    0 0 3px rgb(26, 26, 26),
+    0 0 0px rgb(82, 82, 82);
 }
 
 .box-glow-white {
@@ -69,6 +78,11 @@
     0 0 4px rgb(255, 45, 45),
     0 0 4px rgb(255, 45, 45),
     0 0 20px rgb(255, 45, 45);
+}
+.bg-black-to-white {
+  background: linear-gradient(to right, white 50%,
+    gray 0%,
+    #100F0F 50%);
 }
 
 .vertical-text {
