--- a/src/App.css
+++ b/src/App.css
@@ -105,17 +105,24 @@
 }
 
 .box-glow-white {
-  box-shadow: 0 0 4px rgba(158, 158, 158, 1),
-    0 0 4px rgba(255, 255, 255, 1),
-    0 0 4px rgba(255, 255, 255, 1),
-    0 0 40px rgba(255, 255, 255, 1);
+  box-shadow: 0 2px 4px rgb(4, 4, 4),
+    0 2px 4px rgb(0, 0, 0),
+    0 2px 4px rgba(255, 255, 255, 1),
+    0 2px 10px rgba(255, 255, 255, 1);
+}
+
+.box-glow-dna {
+  box-shadow: 0 0 4px rgb(255, 255, 255),
+    0 0 4px rgb(158, 158, 158),
+    0 2px 4px rgba(255, 255, 255, 1),
+    0 2px 40px rgba(255, 255, 255, 1);
 }
 
 .box-glow-red {
   box-shadow: 0 0 4px rgb(255, 45, 45),
     0 0 4px rgb(255, 45, 45),
     0 0 4px rgb(255, 45, 45),
-    0 0 20px rgb(255, 45, 45);
+    0 0 30px rgb(255, 45, 45);
 }
 .bg-black-to-white {
   background: linear-gradient(to right, white 50%,
