changed font name

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Display;
-  src: url(/src/assets/fonts/Sephyrok\ Regular.otf);
+  src: url(/src/assets/fonts/Sephyrok.otf);
 }
 
 @font-face {
